# hl-extension

./: Dockerfile.linux  Dockerfile.win  Main.hx  README.md  build.hxml  commands.sh  compile_c.sh  docker-compose.yml
hlextLib/: hlext.c  makefile  makefile.linux  makefile.mac  makefile.win
hlextLib/hlext/: HLExt.hx
hlibLib/: CMakeLists.txt  hlib.c
hlibLib/hlib/: HLib.hx
